src/objects/Submission_History__c.object
<CustomObject>
    <fields>
        <fullName>Correction_Plan__c</fullName>
        <label>Correction Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_EEC_Feedback__c</fullName>
        <label>Corrective Action EEC Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corrective_Actions_Submitter__c</fullName>
        <label>Corrective Actions Submitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Corrective_Actions_Received__c</fullName>
        <label>Date Corrective Actions Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implemented__c</fullName>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Submission History</relationshipLabel>
        <relationshipName>Submission_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Corrective_Action_EEC_Feedback__c</fullName>
        <label>Last Corrective Action EEC Feedback</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Compliant_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Non Compliant Item</label>
        <referenceTo>Non_Compliant__c</referenceTo>
        <relationshipLabel>Submission History</relationshipLabel>
        <relationshipName>Submission_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit Item</label>
        <referenceTo>Inspection_Item__c</referenceTo>
        <relationshipLabel>Submission History</relationshipLabel>
        <relationshipName>Submission_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Submission History</relationshipLabel>
        <relationshipName>Submission_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH# {00000}</displayFormat>
        <label>Submission History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission History</pluralLabel>
    <recordTypes>
        <fullName>NC_Item_Corrective_Action_Plan_Submission_History</fullName>
        <active>true</active>
        <label>NC Item Corrective Action Plan Submission History</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visit_Corrective_Action_Plan_Submission_History</fullName>
        <active>true</active>
        <label>Visit Corrective Action Plan Submission History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>